--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: pages-themes/minimal@v0.2.0 #cayman
+remote_theme: pages-themes/minimal@v0.2.0 #minimal, minima, cayman
 plugins:
 - jekyll-remote-theme
